[metadata]
name = grndwork_python_client
version = 1.0.0-alpha.4
author = GroundWork Renewables
author_email = asmith@grndwork.com
description = Groundwork API Client
long_description = <long description>
long_description_content_type = text/markdown
url = https://github.com/GroundWorkRenewables/grndwork-api-client
project_urls =
    Bug Tracker = https://github.com/GroundWorkRenewables/grndwork-api-client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src_py
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
